# xephon-admin

./: ROADMAP.md
.github/workflows/: ci.yml  security.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_admin_foundation.py
backend/app/: main.py
backend/app/api/v1/: audit.py  roles.py  services.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: session.py
backend/app/keycloak/: admin.py
backend/app/models/: __init__.py  audit_log.py  service.py
backend/app/schemas/: audit_log.py  service.py  user.py
backend/tests/: conftest.py  test_audit.py  test_roles.py  test_services.py  test_users.py
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: CurrentUserContext.tsx  RequireAuth.tsx  keycloak.ts
frontend/src/pages/: AuditLogPage.tsx  ServicesPage.tsx  UserPage.tsx  UsersPage.tsx
scripts/: pytest_summary.py
